# 7574A16C2

./: README.md
IPC/concurrencia/ejerciciosvarios/: Readme.md  barrera.c  barrera_nuevo.c  destructor.c  exclusionmutua.c  multiplesprocsconsmult.c  multiplesprodcons.c
IPC/concurrencia/prodconscolamsjs/: Readme.md  consumidor.c  destructor.c  lanzador.c  productor.c
IPC/sockets/concurrente/: Readme.md  client.c  server.c  worker.c
IPC/sockets/concurrente/include/: connector.h  constants.h  measure.h
IPC/sockets/echo/: Readme.md  client.c  server.c
IPC/sockets/echo/include/: connector.h
IPC/sockets/iterativo/: Readme.md  client.c  server.c
IPC/sockets/iterativo/include/: logger.h
cajero/: README.md
cajero/CGI/: CMakeLists.txt  README.md  api  main.cpp
cajero/CGI/client/: index.html
cajero/CGI/client/css/: main.css
cajero/CORBA/: .gitignore  README.md  cajero.idl  cajero_client.py  cajero_impl.py  constantes.py
cajero/RMI/: README.md  Readme.md  build.gradle  settings.gradle
cajero/RMI/CajeroClient/: build.gradle
cajero/RMI/CajeroInterface/: build.gradle
cajero/RMI/CajeroServer/: .gitignore  build.gradle
cajero/RPC/: CMakeLists.txt  README.md  cajero.h  cajero.x  cajero_client.cpp  cajero_clnt.c  cajero_server.cpp  cajero_svc.c  cajero_xdr.c  constants.h
cajero/RabbitMq/: README.md  build.gradle  settings.gradle
cajero/RabbitMq/CajeroCommons/main/java/src/ar/uba/fi/distribuidos1/commons/: Cuenta.java
cajero/RabbitMq/CajeroCommons/src/java/main/ar/uba/fi/distribuidos1/commons/: CuentaExistenteException.java  CuentaInexistenteException.java  Extraccion.java  SaldoInsuficienteException.java
cajero/RabbitMq/CajeroCommons/src/main/java/ar/uba/fi/distribuidos1/commons/: Constantes.java  Movimiento.java
cajero/RabbitMq/CajeroConsumer/: build.gradle
cajero/RabbitMq/CajeroConsumer/src/main/java/ar/uba/fi/distribuidos1/cajero/: CajeroConsumer.java  Cuenta.java  CuentaExistenteException.java  CuentaInexistenteException.java  Deposito.java  Extraccion.java  Operacion.java  (+1 more)
cajero/RabbitMq/CajeroProducer/: build.gradle
cajero/RabbitMq/gradle/wrapper/: gradle-wrapper.properties
cajero/RabbitMq/main/java/src/ar/uba/fi/distribuidos1/cajero/: CajeroConsumer.java
cajero/RabbitMq/main/java/src/ar/uba/fi/distribuidos1/commons/: Constantes.java  Deposito.java  Operacion.java
cajero/tradicional/: README.md  cajero.h  main.cpp
middleware/: README.md
middleware/etapa1/: .gitignore  CMakeLists.txt  README.md  cliente.cxx  demo.exp  demo.tcl  destructor.cxx  middleware.cxx  traductor.cxx
middleware/etapa1/include/: connector.h  constants.h  middleware.h  msg.h  resources.h
middleware/etapa2/: README.md  cliente.cxx  demo.exp  destructor.cxx  middleware.cxx  productor.cxx
middleware/etapa2/include/: middle.h  middleware.h  msg.h  resources.h
middleware/etapa3/: .gitignore  CMakeLists.txt  README.md  cliente.cxx  middlewareclient.cxx  middlewareserver.cxx  middlewareworker.cxx  traductor.cxx
middleware/etapa3/demo/: Destructor  MiddlewareClient  MiddlewareServer  demo-traductores.tcl
middleware/etapa3/demo/cliente/: Cliente  MiddlewareWorker  demo-clientes.tcl  demo-palabras.txt
middleware/etapa3/demo/traductor/: Traductor
middleware/etapa3/include/: connector.h  constants.h  middleware.h  utils.h
(+16 files in other folders)
